--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello Maksim!</p>
+    <p>Hello Maksim The Wise!</p>
     <!-- <script>
         alert(1);
     </script> -->
